@@ -1,5 +1,8 @@
 2007-08-13  Hubert Figuiere  <hub@figuiere.net>
 
+	* source/XMPCore/, public/include/: new call DeleteLocalizedText()
+	by Ian Jacobi.
+	
 	* New API xmp_append_array_item(), xmp_delete_property(),
 	xmp_has_property(), xmp_get_localized_text(), 
 	xmp_set_localized_text() by Ian Jacobi.
